register issue resloved